text-changes, sls, icons and other settings

--- a/deployment/00_overview.mdx
+++ b/deployment/00_overview.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Overview"
+icon: cloud
 ---
 
 This is work in progress. Currently only the serverless deployment method is complete, check it out!
