--- a/intro/00_motivation.mdx
+++ b/intro/00_motivation.mdx
@@ -1,10 +1,12 @@
 ---
-title: "Introduction and Motivation"
+title: "Introduction / Motivation"
+icon: brain
 ---
 **
 Please read the entire documentation from start to back. It is only 12 pages and will make sure you will have
-the best experience working with this boilerplate. It is designed to be like a course, read it chapter by chapter
-and you will master this techstack and workflow in no time
+the best experience working with this boilerplate. It is designed to be like a course, read it chapter by chapter.
+Open the documentation and the repository side-by-side, I will guide you through the code
+so you will master this techstack and workflow in no time
 **
 
 ### The problem we have
@@ -25,24 +27,25 @@ integration of C and simple hardware acceleration. Especially with the wide adop
 are becoming ever more important.
 
 
-### What this offers
+### What I offer
 So what is this, and how does it solve these problems?
 This is all the boilerplate you will ever need for a Product, not just a Project. Besides the development
 environment which allows you to quickly develop using Flask, ReactJS, ES-build, and PostCSS , it has:
-- a **database**, so you can save users
-- **authentification**, so you can paywall your product
-- **payments**, so they can pay for your product
-- **emails**, so you can do marketing and communicate with users
+- a **database**
+- an **authentification** system
+- **payments**
+- **emails**
 
 Obviosly you don't want to self-host this application on your laptop. That is why
 everything is configured so you can quickly and cheaply deploy to AWS - 
-both orchestrated Docker containers and serverless Lambda functions are supported.
+both orchestrated Docker containers (soon) and serverless Lambda functions are supported.
 
 ### Prerequisites
 What do you need to know before you start? I expect you to be a Flask developer familiar with modern 
 JavaScript: you need to know how package managers and bundling work. You should also know how Flask, WSGIs and 
 web servers interact under the hood.
-Thats it! Throughout this documentation I am going to teach you and help you setup:
+Thats it, you can choose you own frontend! 
+Throughout this documentation I am going to teach you and help you setup:
 - what advantages *NoSQL databases* and *DynamoDB* bring
 - how *authentification* works using *OAuth* 
 - how to do *payments* using *Stripe*
@@ -51,3 +54,4 @@ Thats it! Throughout this documentation I am going to teach you and help you set
 - how to use *SES* to cheaply send emails 
 so you can effectively use and customize this boilerplate with confidence
 
+Continue reading to learn how
