--- a/intro/02_installation.mdx
+++ b/intro/02_installation.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Installation / Setup"
+icon: wrench
 ---
 
 ### Requirements
@@ -12,7 +13,6 @@ For deployment install:
 - [Docker](https://docs.docker.com/get-docker/)
 - [AWS-CLI](https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html)
 - [Serverless CLI](https://www.serverless.com/framework/docs-getting-started)
-
 
 ### Running the application
 Once we are done with configuration, you will have two choices to start the app:
