--- a/main/00_authentication.mdx
+++ b/main/00_authentication.mdx
@@ -1,13 +1,19 @@
 ---
 title: "Authentication"
+icon: lock
 ---
-
+### theory behind authentication
 Quick primer: how does basic authentication using tokens work? Once the user logs in successfully, he
 receives a token by which he can be identified.
-This token is saved locally on the server (in the session), as well as in the cookies of the user. 
-Once the user switches the page, this cookie is read by the server, matched with a token from the session,
-which allows the server to authenticate the user since it now knows who he is.
+This token is saved in the session, in our case a secure cookie. 
+Once the user switches the page, this cookie is read by the server,
+which allows the server to authenticate the user since it now knows who he is,
+since this cookie can't be changed unless you reveal your secret key.
 
+<img src="../images/cookie-auth.png" alt="grafical explanation of authentication"/>
+source: https://javascript.plainenglish.io/react-native-cookie-authentication-83ef6e84ba70
+
+### implementing OAuth
 Now the next logical step would be to build a simple email login page and do this manually, but we don't.
 Instead we use OAuth: the user logs in with another provider like Google or GitHub with their existing
 accounts. The provider then generates the token themselves and gives it to us, so we can access information
@@ -15,7 +21,6 @@ about the user like his email. Why do we do this? Well, originally OAUTH was cre
 perform actions on behalf of a user, learn more in [this 5 minute video](https://www.youtube.com/watch?v=KT8ybowdyr0).
 However, the main selling point is the user experience: it is much easier to have one Google account which
 you use to login everywhere instead of creating hundrets of separate accounts.
-
 
 How does this work? First we need to create a new application at an OAuth provider like in our case GitHub and 
 configure a callback adress. This is where the user will be sent once he is done logging in. 
@@ -57,7 +62,7 @@ def signupRoute():
     return github.authorize_redirect(f"{request.host_url}callback{f'?next={next}' if next else ''}")
 ``` 
 
-From here he is once againredirected to GitHub using the ``authorize_redirect`` function. To it, we pass a callback URL, which
+From here he is once again redirected to GitHub using the ``authorize_redirect`` function. To it, we pass a callback URL, which
 consists of our host, the "/callback" route and a "next" query parameter which displays where the user was planning to
 go originally. This callback URL *HAS* to match the pattern, that we provided in our OAuth application settings, since GitHub
 doesn't want the user to be sent to malicious sites, if the secret keys are compromised.
