--- a/main/04_extras.mdx
+++ b/main/04_extras.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Extras"
+icon: gear
 ---
 
 Unfortunately there is a bunch more to running a website besides building the application.
@@ -71,6 +72,6 @@ The favicon is the little icon that gets displayed in your browser. Interestingl
 Once you create a favicon from a normal image in [this tool](https://favicon.io/favicon-converter/), you will
 get a bunch of different files, I will just let ChatGPT explain:
 
-<img src="../images/favicon-gpt.png"/>
+<img src="../images/favicon-gpt.png"/ alt="explanation on different favicons by ChatGPT">
 
-Simply extract the metioned files into ``static/assets/favicon``
+Simply extract the metioned files into ``static/assets/favicon``    
