--- a/intro/00_motivation.mdx
+++ b/intro/00_motivation.mdx
@@ -2,12 +2,12 @@
 title: "Introduction / Motivation"
 icon: brain
 ---
-**
-Please read the entire documentation from start to back. It is only 12 pages and will make sure you will have
+
+>*Please read the entire documentation from start to back. It is only 12 pages and will make sure you will have
 the best experience working with this boilerplate. It is designed to be like a course, read it chapter by chapter.
 Open the documentation and the repository side-by-side, I will guide you through the code
-so you will master this techstack and workflow in no time
-**
+so you will master this techstack and workflow in no time!*
+
 
 ### The problem we have
 In recent years the Web Development landscape has changed drastically: ever newer tools 
@@ -27,12 +27,12 @@ integration of C and simple hardware acceleration. Especially with the wide adop
 are becoming ever more important.
 
 
-### What I offer
+### How this solves the problem
 So what is this, and how does it solve these problems?
 This is all the boilerplate you will ever need for a Product, not just a Project. Besides the development
 environment which allows you to quickly develop using Flask, ReactJS, ES-build, and PostCSS , it has:
-- a **database**
-- an **authentification** system
+- **database**
+- **authentification**
 - **payments**
 - **emails**
 
@@ -46,12 +46,12 @@ JavaScript: you need to know how package managers and bundling work. You should 
 web servers interact under the hood.
 Thats it, you can choose you own frontend! 
 Throughout this documentation I am going to teach you and help you setup:
-- what advantages *NoSQL databases* and *DynamoDB* bring
-- how *authentification* works using *OAuth* 
-- how to do *payments* using *Stripe*
-- how to deploy to AWS using *Docker* and the *"Serverless Framework"*
-- how to manage *domains* on AWS
-- how to use *SES* to cheaply send emails 
+- what advantages **NoSQL databases** and *DynamoDB* bring
+- how **authentification** works using **OAuth**
+- how to do **payments** using **Stripe**
+- how to deploy to AWS using **Docker** and the **"Serverless Framework"**
+- how to manage **domains** on AWS
+- how to use **SES** to cheaply send emails 
 so you can effectively use and customize this boilerplate with confidence
 
 Continue reading to learn how
