--- a/main/03_email.mdx
+++ b/main/03_email.mdx
@@ -7,7 +7,7 @@ Emails are important to communicate with your users. We will not set up an email
 these will be transactional emails. For that we will go back to AWS of course - SES (Simple Email Service)
 is here to help!
 
-<img src="../images/mail-pricing.png"/ alt="SES compared to mailchimp in cost">
+<img src="../images/mail-pricing.png" alt="SES compared to mailchimp in cost"/>
 
 
 ### Setting up SES
