--- a/main/02_payments.mdx
+++ b/main/02_payments.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Payments"
-icon: credit-card
+icon: money-check-dollar
 ---
 ### Stripe
 If you want to make money, you need to charge users. Thankfully, this is as easy as ever. Providers like 
