sls mostly finished

--- a/deployment/00_overview.mdx
+++ b/deployment/00_overview.mdx
@@ -3,4 +3,4 @@ title: "Overview"
 icon: cloud
 ---
 
-This is work in progress. Currently only the serverless deployment method is complete, check it out!
+This part of the documenation is still work in progress. Continue by reading the **serverless** chapter!
