--- a/intro/00_motivation.mdx
+++ b/intro/00_motivation.mdx
@@ -3,13 +3,13 @@ title: "Introduction / Motivation"
 icon: brain
 ---
 
->*Please read the entire documentation from start to back. It is only 12 pages and will make sure you will have
+>Please **read the entire documentation** from start to back. It is only 12 pages and will make sure you will have
 the best experience working with this boilerplate. It is designed to be like a course, read it chapter by chapter.
 Open the documentation and the repository side-by-side, I will guide you through the code
-so you will master this techstack and workflow in no time!*
+so you will master this techstack and workflow in no time!
 
 
-### The problem we have
+### I am tired 
 In recent years the Web Development landscape has changed drastically: ever newer tools 
 allow for easier and faster shipment of your application. On the forefront: JavaScript.
 Everyone else however, is being left behind. In a world where you can get a NextJS
@@ -21,14 +21,14 @@ application running with everything you could ever need. But thats boring, I wou
 dockerize my applications, setup Nginx and Gunicorn, Deploy everything to AWS while figuring out which of
 more than 200 services I need to use. Don't forget about domains, oh and also ... just like ...
 
-You see where I am going. While the temptation to take the JavaScript pill is high, Python is still my backend of choice.
+You see where I am going. While the temptation to switch to JavaScript is high, Python is still my backend of choice.
 It has giant ecosystem of libraries, is widely supported and can be made very performant through 
 integration of C and simple hardware acceleration. Especially with the wide adoption of AI these aspects 
 are becoming ever more important.
 
 
-### How this solves the problem
-So what is this, and how does it solve these problems?
+### How ShipPil tries to solve this
+So what is this?
 This is all the boilerplate you will ever need for a Product, not just a Project. Besides the development
 environment which allows you to quickly develop using Flask, ReactJS, ES-build, and PostCSS , it has:
 - **database**
@@ -37,8 +37,8 @@ environment which allows you to quickly develop using Flask, ReactJS, ES-build, 
 - **emails**
 
 Obviosly you don't want to self-host this application on your laptop. That is why
-everything is configured so you can quickly and cheaply deploy to AWS - 
-both orchestrated Docker containers (soon) and serverless Lambda functions are supported.
+everything is configured so you can *quickly and cheaply deploy*:
+(soon) both orchestrated Docker containers and serverless Lambda functions are supported.
 
 ### Prerequisites
 What do you need to know before you start? I expect you to be a Flask developer familiar with modern 
