--- a/intro/01_structure.mdx
+++ b/intro/01_structure.mdx
@@ -12,7 +12,7 @@ As a Flask developer you will immediately see a familiar pattern:
 - our Flask application in `app.py`
 - a `requirements.txt` file for our python dependencies
 - a `gunicorn_config.py` file which configures our Gunicorn WSGI
-- a Dockerfile to containarize the application for easier development and deployment
+- a `Dockerfile` to containarize the application for easier development and deployment
 - a `static` folder holding the bundled `.js` and `.css` files, they will be imported in our HTML
 - a `serverless.yml` file which defines our IAS (Infrastructure As Code), we will use it later to deploy a Lambda function
 
