--- a/main/04_extras.mdx
+++ b/main/04_extras.mdx
@@ -97,3 +97,8 @@ if os.getenv("CDN_DOMAIN", None):
 
 Talisman(app, content_security_policy=csp)
 ```
+
+
+### Congrats!
+You now know how to develop quickly using ShipPil. But that is not the end. Continue reading the deployment
+chapter to learn how you can server your newly built application to the World Wide Web
